"show more" logic

--- a/index.html
+++ b/index.html
@@ -20,138 +20,151 @@
       <h1 class="title">Ремонт техники различных брендов</h1>
     </header>
     <div class="wrapper">
-      <ul class="brand-list">
-        <li class="brand-list__item">
-          <img src="./assets/logos/lenovo.svg" alt="" />
-          <span>
-            <img src="./assets/icons/dropdown.svg" alt="" />
-          </span>
-        </li>
-        <li class="brand-list__item">
-          <img src="./assets/logos/samsung.svg" alt="" />
-          <span>
-            <img src="./assets/icons/dropdown.svg" alt="" />
-          </span>
-        </li>
-        <li class="brand-list__item">
-          <img src="./assets/logos/apple.svg" alt="" />
-          <span>
-            <img src="./assets/icons/dropdown.svg" alt="" />
-          </span>
-        </li>
-        <li class="brand-list__item">
-          <img src="./assets/logos/sonic.svg" alt="" />
-          <span>
-            <img src="./assets/icons/dropdown.svg" alt="" />
-          </span>
-        </li>
-        <li class="brand-list__item">
-          <img src="./assets/logos/hp.svg" alt="" />
-          <span>
-            <img src="./assets/icons/dropdown.svg" alt="" />
-          </span>
-        </li>
-        <li class="brand-list__item">
-          <img src="./assets/logos/acer.svg" alt="" />
-          <span>
-            <img src="./assets/icons/dropdown.svg" alt="" />
-          </span>
-        </li>
-        <li class="brand-list__item">
-          <img src="./assets/logos/sony.svg" alt="" />
-          <span>
-            <img src="./assets/icons/dropdown.svg" alt="" />
-          </span>
-        </li>
-        <li class="brand-list__item">
-          <img src="./assets/logos/bosch.svg" alt="" />
-          <span>
-            <img src="./assets/icons/dropdown.svg" alt="" />
-          </span>
-        </li>
-        <li class="brand-list__item">
-          <img src="./assets/logos/lenovo.svg" alt="" />
-          <span>
-            <img src="./assets/icons/dropdown.svg" alt="" />
-          </span>
-        </li>
-        <li class="brand-list__item">
-          <img src="./assets/logos/samsung.svg" alt="" />
-          <span>
-            <img src="./assets/icons/dropdown.svg" alt="" />
-          </span>
-        </li>
-        <li class="brand-list__item">
-          <img src="./assets/logos/apple.svg" alt="" />
-          <span>
-            <img src="./assets/icons/dropdown.svg" alt="" />
-          </span>
-        </li>
-      </ul>
+      <div>
+        <ul class="brand-list">
+          <li class="brand-list__item">
+            <img src="./assets/logos/lenovo.svg" alt="" />
+            <span>
+              <img src="./assets/icons/dropdown.svg" alt="" />
+            </span>
+          </li>
+          <li class="brand-list__item">
+            <img src="./assets/logos/samsung.svg" alt="" />
+            <span>
+              <img src="./assets/icons/dropdown.svg" alt="" />
+            </span>
+          </li>
+          <li class="brand-list__item">
+            <img src="./assets/logos/apple.svg" alt="" />
+            <span>
+              <img src="./assets/icons/dropdown.svg" alt="" />
+            </span>
+          </li>
+          <li class="brand-list__item">
+            <img src="./assets/logos/sonic.svg" alt="" />
+            <span>
+              <img src="./assets/icons/dropdown.svg" alt="" />
+            </span>
+          </li>
+          <li class="brand-list__item">
+            <img src="./assets/logos/hp.svg" alt="" />
+            <span>
+              <img src="./assets/icons/dropdown.svg" alt="" />
+            </span>
+          </li>
+          <li class="brand-list__item">
+            <img src="./assets/logos/acer.svg" alt="" />
+            <span>
+              <img src="./assets/icons/dropdown.svg" alt="" />
+            </span>
+          </li>
+          <li
+            class="brand-list__item brand-list__item--invisible hidden hidden-tablet"
+          >
+            <img src="./assets/logos/sony.svg" alt="" />
+            <span>
+              <img src="./assets/icons/dropdown.svg" alt="" />
+            </span>
+          </li>
+          <li
+            class="brand-list__item brand-list__item--invisible hidden hidden-tablet"
+          >
+            <img src="./assets/logos/bosch.svg" alt="" />
+            <span>
+              <img src="./assets/icons/dropdown.svg" alt="" />
+            </span>
+          </li>
+          <li class="brand-list__item brand-list__item--invisible hidden">
+            <img src="./assets/logos/lenovo.svg" alt="" />
+            <span>
+              <img src="./assets/icons/dropdown.svg" alt="" />
+            </span>
+          </li>
+          <li class="brand-list__item brand-list__item--invisible hidden">
+            <img src="./assets/logos/samsung.svg" alt="" />
+            <span>
+              <img src="./assets/icons/dropdown.svg" alt="" />
+            </span>
+          </li>
+          <li
+            class="brand-list__item brand-list__item--invisible hidden not-on-desktop"
+          >
+            <img src="./assets/logos/apple.svg" alt="" />
+            <span>
+              <img src="./assets/icons/dropdown.svg" alt="" />
+            </span>
+          </li>
+        </ul>
+
+        <button class="more-btn">
+          <img src="./assets/icons/more.svg" alt="" />
+          <span class="more-btn__text">Показать все</span>
+        </button>
+      </div>
 
       <div class="swiper">
-        <div class="swiper__wrapper">
-          <div class="swiper__slide">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
             <img src="./assets/logos/lenovo.svg" alt="" />
             <span>
               <img src="./assets/icons/dropdown.svg" alt="" />
             </span>
           </div>
-          <div class="swiper__slide">
+          <div class="swiper-slide">
             <img src="./assets/logos/samsung.svg" alt="" />
             <span>
               <img src="./assets/icons/dropdown.svg" alt="" />
             </span>
           </div>
-          <div class="swiper__slide">
+          <div class="swiper-slide">
             <img src="./assets/logos/apple.svg" alt="" />
             <span>
               <img src="./assets/icons/dropdown.svg" alt="" />
             </span>
           </div>
-          <div class="swiper__slide">
+          <div class="swiper-slide">
             <img src="./assets/logos/sonic.svg" alt="" />
             <span>
               <img src="./assets/icons/dropdown.svg" alt="" />
             </span>
           </div>
-          <div class="swiper__slide">
+          <div class="swiper-slide">
             <img src="./assets/logos/hp.svg" alt="" />
             <span>
               <img src="./assets/icons/dropdown.svg" alt="" />
             </span>
           </div>
-          <div class="swiper__slide">
+          <div class="swiper-slide">
             <img src="./assets/logos/acer.svg" alt="" />
             <span>
               <img src="./assets/icons/dropdown.svg" alt="" />
             </span>
           </div>
-          <div class="swiper__slide">
+          <div class="swiper-slide">
             <img src="./assets/logos/sony.svg" alt="" />
             <span>
               <img src="./assets/icons/dropdown.svg" alt="" />
             </span>
           </div>
-          <div class="swiper__slide">
+          <div class="swiper-slide">
             <img src="./assets/logos/bosch.svg" alt="" />
             <span>
               <img src="./assets/icons/dropdown.svg" alt="" />
             </span>
           </div>
-          <div class="swiper__slide">
+          <div class="swiper-slide">
             <img src="./assets/logos/lenovo.svg" alt="" />
             <span>
               <img src="./assets/icons/dropdown.svg" alt="" />
             </span>
           </div>
-          <div class="swiper__slide">
+          <div class="swiper-slide">
             <img src="./assets/logos/samsung.svg" alt="" />
             <span>
               <img src="./assets/icons/dropdown.svg" alt="" />
             </span>
           </div>
-          <div class="swiper__slide">
+          <div class="swiper-slide">
             <img src="./assets/logos/apple.svg" alt="" />
             <span>
               <img src="./assets/icons/dropdown.svg" alt="" />
@@ -162,11 +175,11 @@
       </div>
 
       <!-- Swiper JS -->
-      <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
       <!-- Initialize Swiper -->
       <script>
-        var swiper = new Swiper(".swiper", {
+        const swiper = new Swiper(".swiper", {
           pagination: {
             el: ".swiper-pagination",
             clickable: true,
@@ -175,6 +188,8 @@
           spaceBetween: 16,
         });
       </script>
+
+      <script src="script.js"></script>
     </div>
   </body>
 </html>
